[package]
name = "apple-one-jit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = "0.26.2"
log = "0.4"
simplelog = "0.12"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"

[build-dependencies]
xshell = "0.2"
